# neopilot.nvim

./: .commitlintrc.json  .gitattributes  Build.ps1  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  build.sh  init.lua  lazy-lock.json  muxter  neopilot.toml  ruff.toml  run_tests.lua  test.lua
.github/: dependabot.yml  gitleaks.toml
.github/codeql/: codeql-config.yml
.github/security/: csp-config.json  security-headers.js
.github/workflows/: ci.yml  codeql-analysis.yml  docker-build.yml  format.yml  lint.yml  secret-scanning.yml  security-headers.yml  tests.yml
autoload/: neopilot.vim
crates/neopilot-html2md/: Cargo.toml
crates/neopilot-html2md/src/: lib.rs
crates/neopilot-repo-map/: Cargo.toml
crates/neopilot-repo-map/src/: lib.rs
crates/neopilot-repo-map/tests/: config_test.rs  integration_test.rs
crates/neopilot-templates/: Cargo.toml
crates/neopilot-templates/src/: lib.rs
crates/neopilot-tokenizers/: Cargo.toml
crates/neopilot-tokenizers/src/: error.rs  huggingface.rs  lib.rs  tiktoken.rs
crates/neopilot-tokenizers/src/huggingface/: mod.rs
crates/neopilot-tokenizers/src/tiktoken/: mod.rs
crates/neopilot-tokenizers/tests/: error_handling.rs  integration_tests.rs  property_tests.rs  test_helpers.rs  tokenizer_tests.rs
docker/: .env.example  .nvimlog  Dockerfile  README.md  dev.sh  docker-compose.yml
docker/lua/plugin_managers/:  packadd.lua   packer.lua  lazy.lua
lua/: neopilot_lib.lua
lua/anchor/: init.lua  list.lua  memory_store.lua  telescope.lua  ui.lua
lua/cmp_neopilot/: commands.lua  mentions.lua  shortcuts.lua
lua/kengine/: Kenginefile  clock.lua
lua/khulnasoft/: init.lua  lazy_init.lua  remap.lua  set.lua
lua/khulnasoft/lazy/: conform.lua  copilot.lua  dap.lua  fugitive.lua  local.lua  lsp.lua  vimbegood.lua
lua/khulnasoft/plugins/: treesitter.lua
lua/khulnasoft/remap/: treesitter.lua
lua/khulnasoft/snippets/: init.lua
lua/khulnasoft/utils/: treesitter_format.lua
lua/move_better/: README.md  init.lua  suggestions.lua  tracker.lua  ui.lua
lua/neopilot/: api.lua  clipboard.lua  commands.lua  config.lua  config_v2.lua  diff.lua  error_handling.lua  file_selector.lua  health.lua  highlights.lua  history_selector.lua  html2md.lua  init.lua  llm.lua  model_selector.lua  path.lua  performance.lua  rag_service.lua  range.lua  repo_map.lua  selection.lua  selection_result.lua  sidebar.lua  suggestion.lua  tokenizers.lua  types.lua
lua/neopilot/config/: init.lua  presets.lua
lua/neopilot/extensions/: init.lua  nvim_tree.lua
lua/neopilot/history/: helpers.lua  init.lua  message.lua  render.lua
lua/neopilot/libs/: ReAct_parser.lua  ReAct_parser2.lua
lua/neopilot/llm_tools/: add_todos.lua  attempt_completion.lua  bash.lua  create.lua  delete_tool_use_messages.lua  dispatch_agent.lua  edit_file.lua  get_diagnostics.lua  glob.lua  grep.lua  helpers.lua  init.lua  insert.lua  ls.lua  replace_in_file.lua  str_replace.lua  think.lua  undo_edit.lua  update_todo_status.lua  view.lua  write_to_file.lua
lua/neopilot/lsp/: health.lua  init.lua  server.lua  workspace.lua
lua/neopilot/providers/: azure.lua  bedrock.lua  claude.lua  cohere.lua  copilot.lua  gemini.lua  init.lua  ollama.lua  openai.lua  vertex.lua  vertex_claude.lua
lua/neopilot/suggestion/: cache.lua
lua/neopilot/templates/: agentic.neopilotrules  base.neopilotrules  editing.neopilotrules  legacy.neopilotrules  (+1 more)
lua/powershell/: gzip.ps1
lua/refactorings/: README.md  example.lua  extract_method.lua  init.lua  inline_temp.lua  rename_variable.lua
plugin/: anchor.lua  neopilot.lua
py/rag-service/: run.sh  shell.nix
scripts/: check-security-headers.sh
templates/: plugin_template.lua
tests/: anchor_spec.lua  llm_tools_spec.lua  rag_service_spec.lua  refactorings_example_spec.lua  refactorings_example_test.lua
tests/libs/: jsonparser_spec.lua
tests/llm_tools/: helpers_spec.lua
tests/performance/: large_file_test.lua  load_test.lua  provider_health_test.lua  run_all_tests.lua
tests/providers/: bedrock_spec.lua
tests/utils/: file_spec.lua  fix_diff_spec.lua  get_parent_path_spec.lua  init_spec.lua  join_paths_spec.lua  make_relative_path_spec.lua  streaming_json_parser_spec.lua
(+34 files in other folders)
