[lib]
crate-type = ["cdylib"]

[package]
name = "neopilot-html2md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
htmd = "0.1.6"
html2md = "0.2.15"
mlua = { version = "0.10.0", default-features = false, features = ["lua54", "module", "macros"] }
reqwest = { version = "0.12.12", features = ["blocking", "native-tls-vendored"] }

[lints]
workspace = true

[features]
default = []
lua51 = ["mlua/lua51"]
lua52 = ["mlua/lua52"]
lua53 = ["mlua/lua53"]
lua54 = ["mlua/lua54"]
luajit = ["mlua/luajit"]
