[lib]
crate-type = ["cdylib"]

[package]
name = "neopilot-templates"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
mlua = { version = "0.10.0", default-features = false, features = ["lua54", "module", "macros", "serialize"] }
minijinja = { workspace = true }
serde = { workspace = true, features = ["derive"] }
erased-serde = { version = "0.4", optional = true }
serde-value = { version = "0.7", optional = true }

[lints]
workspace = true

[features]
default = []
lua51 = ["mlua/lua51"]
lua52 = ["mlua/lua52"]
lua53 = ["mlua/lua53"]
lua54 = ["mlua/lua54"]
luajit = ["mlua/luajit"]
